Käytä CompletableFuture kun mahdollista